--- a/dews-hawaii-app/src/app/climate-dashboard/climate-dashboard.component.html
+++ b/dews-hawaii-app/src/app/climate-dashboard/climate-dashboard.component.html
@@ -32,8 +32,8 @@
                         [class.chip-selected]="selectedDataset() === 'Temperature'"
                         (click)="pickDataset('Temperature')">Temperature</button>
                 <button class="chip chip-option"
-                        [class.chip-selected]="selectedDataset() === 'SPI'"
-                        (click)="pickDataset('SPI')">SPI</button>
+                        [class.chip-selected]="selectedDataset() === 'Drought'"
+                        (click)="pickDataset('Drought')">Drought</button>
               </div>
             </div>
 
